# advent_of_code

./: questions.md
2019/: Cargo.toml  main
2019/data/: 01.txt
2019/src/: day_01.rs  day_02.rs  main.rs
2020/: go.mod
2020/01/: go.mod  go.sum  input.txt  prompt.txt  solution.go
2020/02/: go.mod  small_input.txt  solution.go
2020/03/: solution.go  test.txt
2020/04/: puzzle.txt  solution.go
2020/05/: solution.go
2020/06/: solution.go  test.txt
2020/07/: solution.go  test.txt
2020/08/: solution.go
2020/09/: solution.go
2020/10/: solution.go  test.txt
2020/11/: solution.go  test.txt
2020/12/: part_2.go  solution.go  test.txt
2020/13/: solution.go
2020/14/: solution.go  test.txt
2020/15/: example.txt  solution.go
2020/utils/: utils.go
2021/: Cargo.toml
2021/data/: 11.input  12.input  16.input  20.input  4.input  6.input  9.input
2021/scratch/: day3.rs
2021/src/: day1.input  day1.rs  day10.rs  day11.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
2022/: .ocamlformat  day2.txt  day5.txt  day7.txt  day8.prod  dune-project
2022/lib/: advent.ml  dune
2022/notes/: yt_comment_day_1.txt
2022/test/: dune
2023/: .ocamlformat  README.md  dune-project
2023/inputs/: .gitignore
2023/lib/: advent.ml  dune
2025/: .gitignore  AGENTS.md  package.json  tsconfig.json
2025/src/: day-01.ts  main.tsx
